--- a/package.yaml
+++ b/package.yaml
@@ -21,9 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- unordered-containers
-- bytestring
 - aeson
+- containers
 
 library:
   source-dirs: src
